kustomization/overlays/prod/unifi/patches/add_una_svc_annotations.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kube-vip.io/loadbalancerIPs: 10.11.1.65
    traefik.ingress.kubernetes.io/service.serverstransport: unifi-unifi-network-application-serverstransport@kubernetescrd
  name: this-is-ignored-but-is-required
spec:
  externalTrafficPolicy: Local
